--- a/styles/scss/_mixins.scss
+++ b/styles/scss/_mixins.scss
@@ -9,3 +9,29 @@ font-family: Arial, Helvetica, sans-serif;
     color: $color;
     font-weight: $weight;
 }
+
+@mixin media($size){
+    @if($size == M){
+        @media(max-width:768px){
+            @content;
+        }
+    } @else if($size == L){
+        @media(min-width:768px) and (max-width: 1200px){
+            @content;
+        }
+    }
+}
+
+@mixin bodyStyle{
+    background-color: $secendoryColor;
+    height: 400px;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+@mixin boxStyle{
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1);
+    border-radius: 10px;
+    overflow: hidden;
+}
