--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -16,6 +16,20 @@ body{
     h1{
         @include textStyle(1.3rem, bold, $secendoryColor)
     }
+   
+}
+.hamberger-menu{
+    display: none;
+    flex-direction: column;
+
+    span{
+        display: inline-block;
+        height: 3px;
+        width: 20px;
+        background-color: $secendoryColor;
+        margin: 2px;
+        border-radius: 1.5px;
+    }
 }
 .navbar{
     display: flex;
@@ -41,6 +55,79 @@ body{
 
         &:hover{
             color: $textColor;
+        }
+    }
+}
+.main{
+    display: flex;
+    margin: 2rem 3rem;
+    aside{
+        flex-direction: column;
+        width: 25%;
+        margin-right: 25px;
+        @include bodyStyle;
+        @include boxStyle;
+        div{
+            background-color: $primaryColor;
+            width: 100%;
+            height: 100px;
+            margin: 10px 10px;
+            line-height: 80px;
+            text-align: center;
+            color: $secendoryColor;
+            @include boxStyle;
+        }
+        a{
+            color: $secendoryColor;
+
+        }
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+        width: 75%;
+        @include boxStyle;
+        @include bodyStyle;
+        img{
+            width: 100%;
+            @include boxStyle;
+        }
+        h2{
+            @include textStyle(3rem, bold, $primaryColor);
+            margin-top: 2rem;
+            margin-bottom: 1.5rem;
+        }
+        p{
+            @include textStyle(1.5rem,thin, $textColor);
+        }
+    }
+}
+@include media(M){
+
+    .hamberger-menu{
+        display: flex;
+    }
+    .navbar{
+        display: none;
+    }
+    .main{
+        flex-direction: column-reverse;
+        margin: 1rem;
+
+        main{
+            width: calc(100% - 2rem);
+            height: 300px;
+            margin-bottom: 20px;
+            h2{
+                font-size: 2rem;
+            }
+            p{
+                font-size: 1rem;
+            }
+        }
+        aside{
+            width: calc(100% - 2rem);
+            height: 400px;
         }
     }
 }
