--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -102,6 +102,38 @@ body{
         }
     }
 }
+.cards{
+    width: calc(100% - 6rem);
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto;
+    gap: 30px;
+    padding: 20px 0;
+}
+
+.card{
+    @include boxStyle;
+    display: block;
+    img{
+        width: 100%;
+    }
+    .card-content{
+        line-height: 1.5rem;
+        padding: 15px;
+        background-color: $secendoryColor;
+
+        p{
+            margin: 10px 0;
+            @include textStyle(1.1rem, 100, $textColor);
+        }
+        span{
+            display: inline-block;
+            margin: 10px 0;
+            @include textStyle(.9rem, bold, $primaryColor)
+        }
+    }
+}
 @include media(M){
 
     .hamberger-menu{
@@ -129,5 +161,14 @@ body{
             width: calc(100% - 2rem);
             height: 400px;
         }
+    }
+    .cards{
+        grid-template-columns: 1fr;
+    }
+}
+@include media(L){
+    .cards{
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
     }
 }
