fixed some styles

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primaryColor:#f7287e;
+$primaryColor:#64C3E3;
 $secendoryColor:#fff;
 $textColor:rgb(27,27,27);
-$bgColor:#ecb1d6;
+$bgColor:#E6F1F5;
