--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -79,7 +79,8 @@ body{
         }
         a{
             color: $secendoryColor;
-
+            text-decoration: none;
+            font-weight: bold;
         }
     }
     main{
