--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #ecb1d6;
+  background-color: #E6F1F5;
 }
 
 .header {
@@ -13,7 +13,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.8rem 3rem;
-  background-color: #f7287e;
+  background-color: #64C3E3;
 }
 .header h1 {
   font-size: 1.3rem;
@@ -81,7 +81,7 @@ body {
   overflow: hidden;
 }
 .main aside div {
-  background-color: #f7287e;
+  background-color: #64C3E3;
   width: 100%;
   height: 100px;
   margin: 10px 10px;
@@ -94,6 +94,8 @@ body {
 }
 .main aside a {
   color: #fff;
+  text-decoration: none;
+  font-weight: bold;
 }
 .main main {
   display: flex;
@@ -117,7 +119,7 @@ body {
 }
 .main main h2 {
   font-size: 3rem;
-  color: #f7287e;
+  color: #64C3E3;
   font-weight: bold;
   margin-top: 2rem;
   margin-bottom: 1.5rem;
@@ -162,7 +164,7 @@ body {
   display: inline-block;
   margin: 10px 0;
   font-size: 0.9rem;
-  color: #f7287e;
+  color: #64C3E3;
   font-weight: bold;
 }
 
@@ -170,7 +172,7 @@ footer {
   display: flex;
   padding: 2rem 3rem;
   margin-top: 30px;
-  background-color: #f7287e;
+  background-color: #64C3E3;
 }
 footer .summary {
   width: 50%;
